objects/Financial_Information__c.object
<CustomObject>
    <description>This object tracks the %utilization and limit by products of the customer (Last 12 months)
Display as Visualforce tab in the customer detail page</description>
    <fields>
        <fullName>CC_Limit__c</fullName>
        <label>CC Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CIS_ID__c</fullName>
        <label>CIS ID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Financial Information</relationshipLabel>
        <relationshipName>Financial_Information</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HL_Limit__c</fullName>
        <label>HL Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LI_Limit__c</fullName>
        <label>LI Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LN_Limit__c</fullName>
        <label>LN Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OD_Limit__c</fullName>
        <label>OD Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PN_Limit__c</fullName>
        <label>PN Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>POD_Limit__c</fullName>
        <label>POD Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TF_Limit__c</fullName>
        <label>TF Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Financial Information</label>
    <nameField>
        <displayFormat>{00}</displayFormat>
        <label>REF#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>